inizio preparazione sezione 'rilasci licenze' sul sito web

--- a/sitorapp/parti/rilasc.html
+++ b/sitorapp/parti/rilasc.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Rapporto Semplice/rilasci</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="parti.css">
 </head>
+<body>
+    <div id="gay">
+        <div>
+            <label>Orario</label>
+            <input type="text" id="orario">
+        </div>
+        <div>
+            <label>Licenza Rilasciata</label>
+            <input type="text" id="licenza">
+        </div>
+        <div>
+            <label>Nome e Cognome Civile</label>
+            <input type="text" id="nome">
+        </div>
+        <div>
+            <input type="button" onclick="f1()" id="buttone">
+        </div>
+    </div>
+    <script>
+        function f1(){
+            let orario = document.getElementById("orario");
+            let licenza = document.getElementById("licenza");
+            let nome = document.getElementById("nome");
+        }
+    </script>
+</body>
 </html>
