--- a/sitorapp/parti/rilasc.html
+++ b/sitorapp/parti/rilasc.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rapporto Semplice/RIS</title>
     <link rel="stylesheet" href="parti.css">
 </head>
 <body>
     <div id="gay">
         <div>
             <label>Orario</label>
-            <input type="text" id="orario">
+            <input type="time" id="orario">
         </div>
         <div>
             <label>Licenza Rilasciata</label>
@@ -21,14 +21,17 @@
             <input type="text" id="nome">
         </div>
         <div>
-            <input type="button" onclick="f1()" id="buttone">
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" >
         </div>
+        <div id="stampazione"></div>
     </div>
     <script>
         function f1(){
-            let orario = document.getElementById("orario");
-            let licenza = document.getElementById("licenza");
-            let nome = document.getElementById("nome");
+            let orario = document.getElementById("orario").value;
+            let licenza = document.getElementById("licenza").value;
+            let nome = document.getElementById("nome").value;
+            let stampazione = document.getElementById("stampazione");
+            stampazione.textContent = "- Ore " + orario + " Rilascio " + licenza + " al civile " + nome;
         }
     </script>
 </body>
