aggiunta tasto "Pagina Iniziale", modifica file README

--- a/sitorapp/parti/fine.html
+++ b/sitorapp/parti/fine.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Rapporto Semplice/fine</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rapporto Semplice/Fine</title>
+    <link rel="stylesheet" href="parti.css">
 </head>
+<body>
+<div id="pag">
+    <h1>WIP</h1>
+    <div>
+        <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+    </div>
+</div>
+</body>
 </html>
