--- a/sitorapp/parti/fermi.html
+++ b/sitorapp/parti/fermi.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="parti.css">
 </head>
 <body>
-    <div id="gay">
+    <div id="pag">
         <div>
             <label>Orario</label>
             <input type="time" id="orario">
@@ -31,8 +31,11 @@
         <div>
             <input type="button"  value="Invio" onclick="f1()" id="buttone">
         </div>
-        <div id="stampazione">
+        <div id="stampazione"></div>
+        <div>
+            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
         </div>
+    </div>
     <script>
         function f1(){
             let orario = document.getElementById("orario").value;
