correzione errori di salvataggio

--- a/sitorapp/parti/sciogl.html
+++ b/sitorapp/parti/sciogl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rapporto Semplice/Formazioni</title>
+    <title>Rapporto Semplice/Scioglimenti</title>
     <link rel="stylesheet" href="parti.css">
 </head>
 <body>
