rimozione variabile pmz in struttura C, miglioramento stile sito web

--- a/sitorapp/parti/fermi.html
+++ b/sitorapp/parti/fermi.html
@@ -10,30 +10,30 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Veicolo Fermato</label>
-            <input type="text" id="veicolo">
+            <input type="text" id="veicolo" style="background-color: white;">
         </div>
         <div>
             <label>Targa</label>
-            <input type="text" id="targa">
+            <input type="text" id="targa" style="background-color: white;">
         </div>
         <div>
             <label>Nome Soggetto</label>
-            <input type="text" id="nome">
+            <input type="text" id="nome" style="background-color: white;">
         </div>
         <div>
             <label>Sanzioni Emanate</label>
-            <input type="text" id="sanzioni">
+            <input type="text" id="sanzioni" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone">
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
