--- a/sitorapp/parti/fine.html
+++ b/sitorapp/parti/fine.html
@@ -10,7 +10,7 @@
 <div id="pag">
     <h1>WIP</h1>
     <div>
-        <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+        <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
     </div>
 </div>
 </body>
