--- a/sitorapp/parti/formaz.html
+++ b/sitorapp/parti/formaz.html
@@ -10,34 +10,34 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Pattuglia</label>
-            <input type="text" id="patt">
+            <input type="text" id="patt" style="background-color: white;">
         </div>
         <div>
             <label>Numero Operatori</label>
-            <input type="text" id="num" oninput="f2()">
+            <input type="text" id="num" oninput="f2()" style="background-color: white;">
         </div>
         <div id="opz1">
             <label>Nome Operatore 1</label>
-            <input type="text" id="op1">
+            <input type="text" id="op1" style="background-color: white;">
         </div>
         <div id="opz2">
             <label>Nome Operatore 2</label>
-            <input type="text" id="op2">
+            <input type="text" id="op2" style="background-color: white;">
         </div>
         <div id="opz3">
             <label>Nome Operatore 3</label>
-            <input type="text" id="op3">
+            <input type="text" id="op3" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone" >
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
