--- a/sitorapp/parti/inseg.html
+++ b/sitorapp/parti/inseg.html
@@ -10,31 +10,31 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Veicolo</label>
-            <input type="text" id="veicolo">
+            <input type="text" id="veicolo" style="background-color: white;">
         </div>
         <div>
             <label>Targa</label>
-            <input type="text" id="targa">
+            <input type="text" id="targa" style="background-color: white;">
         </div>
         <div>
             <label>civico</label>
-            <input type="text" id="civico">
+            <input type="text" id="civico" style="background-color: white;">
         </div>
         <div>
             <label>Esito</label>
-            <input type="text" id="esito">
+            <input type="text" id="esito" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone">
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione">
         </div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     <script>
         function f1(){
