--- a/sitorapp/parti/sciogl.html
+++ b/sitorapp/parti/sciogl.html
@@ -10,18 +10,18 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Pattuglia</label>
-            <input type="text" id="patt">
+            <input type="text" id="patt" style="background-color: white;">
         </div>
         <div>
-            <input type="button" value="Invio" onclick="f1()" value="buttone">
+            <input type="button" value="Invio" onclick="f1()" value="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
