--- a/sitorapp/parti/CUFA.html
+++ b/sitorapp/parti/CUFA.html
@@ -10,22 +10,22 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Civico</label>
-            <input type="text" id="civico">
+            <input type="text" id="civico" style="background-color: white;">
         </div>
         <div>
             <label>Esito</label>
-            <input type="text" id="esito">
+            <input type="text" id="esito" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone">
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
