--- a/sitorapp/parti/rilasc.html
+++ b/sitorapp/parti/rilasc.html
@@ -10,22 +10,22 @@
     <div id="pag">
         <div>
             <label>Orario</label>
-            <input type="time" id="orario">
+            <input type="time" id="orario" style="background-color: white;">
         </div>
         <div>
             <label>Licenza Rilasciata</label>
-            <input type="text" id="licenza">
+            <input type="text" id="licenza" style="background-color: white;">
         </div>
         <div>
             <label>Nome e Cognome Civile</label>
-            <input type="text" id="nome">
+            <input type="text" id="nome" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone" >
+            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button>Pagina Iniziale</button></a>
+            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
