--- a/sitorapp/rapporto.html
+++ b/sitorapp/rapporto.html
@@ -10,15 +10,15 @@
     <div id="box">
         <h1>Benvenuto Utente! crea il tuo rapporto in modo semplice</h1>
         <p>Clicca il pulsante giusto per la categoria che ti serve</p>
-        <a href="parti/rilasc.html"><button>Rilasci licenze</button></a>
-        <a href="parti/formaz.html"><button>Formazioni PMZ/Autoradio/Fiamma/Doppia Charlie</button></a>
-        <a href="parti/fermi.html"><button>Fermi</button></a>
-        <a href="parti/inseg.html"><button>Inseguimenti</button></a>
-        <a href="parti/rape.html"><button>Rapine</button></a>
-        <a href="parti/RIS.html"><button>Controlli sostanze</button></a>
-        <a href="parti/CUFA.html"><button>Controlli forestali</button></a>
-        <a href="parti/sciogl.html"><button>Scioglimento PMZ/autoradio/Fiamma/Doppia Charlie</button></a>
-        <a href="parti/fine.html"><button>Resoconto Rapporto</button></a>
+        <a href="parti/rilasc.html"><button style="background-color: white;">Rilasci licenze</button></a>
+        <a href="parti/formaz.html"><button style="background-color: white;">Formazioni PMZ/Autoradio/Fiamma/Doppia Charlie</button></a>
+        <a href="parti/fermi.html"><button style="background-color: white;">Fermi</button></a>
+        <a href="parti/inseg.html"><button style="background-color: white;">Inseguimenti</button></a>
+        <a href="parti/rape.html"><button style="background-color: white;">Rapine</button></a>
+        <a href="parti/RIS.html"><button style="background-color: white;">Controlli sostanze</button></a>
+        <a href="parti/CUFA.html"><button style="background-color: white;">Controlli forestali</button></a>
+        <a href="parti/sciogl.html"><button style="background-color: white;">Scioglimento PMZ/autoradio/Fiamma/Doppia Charlie</button></a>
+        <a href="parti/fine.html"><button style="background-color: white;">Resoconto Rapporto</button></a>
         </div>
 </body>
 </html>
