--- a/sitorapp/parti/fine.html
+++ b/sitorapp/parti/fine.html
@@ -8,10 +8,13 @@
 </head>
 <body>
 <div id="pag">
-    <h1>WIP</h1>
+    <input type="button" value="Stampa" onclick="f4()" id="buttone" style="background-color: white;">
+    <div id="stampazione" style="white-space: pre-line"></div>
     <div>
         <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
     </div>
 </div>
+<script src="resoconto.js">
+</script>
 </body>
 </html>
