--- a/sitorapp/parti/rape.html
+++ b/sitorapp/parti/rape.html
@@ -21,7 +21,7 @@
             <input type="text" id="esito" style="background-color: white;">
         </div>
         <div>
-            <input type="button"  value="Invio" onclick="f1()" id="buttone" style="background-color: white;">
+            <input type="button"  value="Invio" onclick="f1(); f3()" id="buttone" style="background-color: white;">
         </div>
         <div id="stampazione"></div>
         <div>
@@ -29,6 +29,9 @@
         </div>
     </div>
     <script>
+        const script = document.createElement("script");
+        script.src = "resoconto.js";
+        document.head.appendChild(script);
         function f1(){
             let orario = document.getElementById("orario").value;
             let civico = document.getElementById("civico").value;
