modifica nome html principale, modifica link del bottone pagina iniziale

--- a/sitorapp/parti/fine.html
+++ b/sitorapp/parti/fine.html
@@ -11,7 +11,7 @@
     <input type="button" value="Stampa" onclick="f4()" id="buttone" style="background-color: white;">
     <div id="stampazione" style="white-space: pre-line"></div>
     <div>
-        <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
+        <a href="../index.html"><button style="background-color: white;">Pagina Iniziale</button></a>
     </div>
 </div>
 <script src="resoconto.js">
