--- a/sitorapp/parti/inseg.html
+++ b/sitorapp/parti/inseg.html
@@ -34,7 +34,7 @@
         <div id="stampazione">
         </div>
         <div>
-            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
+            <a href="../index.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     <script>
         function f1(){
