--- a/sitorapp/parti/rilasc.html
+++ b/sitorapp/parti/rilasc.html
@@ -25,7 +25,7 @@
         </div>
         <div id="stampazione"></div>
         <div>
-            <a href="../rapporto.html"><button style="background-color: white;">Pagina Iniziale</button></a>
+            <a href="../index.html"><button style="background-color: white;">Pagina Iniziale</button></a>
         </div>
     </div>
     <script>
