modifica titolo pagina

--- a/sitorapp/index.html
+++ b/sitorapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rapporto Facile</title>
+    <title>Rapporto Semplice</title>
     <link rel="stylesheet" href="rapporto.css">
 </head>
 <body>
